--- a/Resume.html
+++ b/Resume.html
@@ -14,7 +14,6 @@
              box-sizing: border-box;
              font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
-
         .name-3d {
             font-size: 4rem;
             font-weight: bold;
@@ -255,7 +254,7 @@
 
         <div class="profile-section">
             <div class="profile-image">
-                <img src="WhatsApp Image 2024-12-22 at 10.40.41_1517fc05.jpg" alt="Rishabh Jain's Profile Picture">
+                <img src="">
 
             </div>
             <div class="profile-info">
